--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,6 @@
     <groupId>com.itheima</groupId>
     <artifactId>GitTest</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
 
 </project>
